--- a/source/courses/cmps369/code/21_guessing_vue/views/game.pug
+++ b/source/courses/cmps369/code/21_guessing_vue/views/game.pug
@@ -11,18 +11,15 @@ html
 
 
     body(style='padding-top:5em')
-        .container#guess(v-cloak, data-game-id = game._id )
+        .container#guess(data-game-id = game._id )
             div(v-if='state == "start"')
                 .row
                     .col-md-8.col-12-sm
-                        form
-                            .row
-                                .col-md-12.form-group
-                                    label(for="guess") Your guess:
-                                    input.form-control(type="number", v-model='guess')/
-                            .row
-                                .col-md-12.form-group
-                                    button.btn.btn-primary(type="button", v-on:click='postGuess()') Guess
+                        .form-group
+                            label(for="guess") Your guess:
+                            input.form-control(type="number", v-model='guess')/
+                        .form-group
+                            button.btn.btn-primary(type="button", v-on:click='postGuess()') Guess
                     .col-md-4.hidden-sm.hidden-xs
                         p.alert.alert-info.
                             Welcome to our guessing game.  The server is thinking of a number between
@@ -30,18 +27,14 @@ html
             div(v-if='state == "guess"')
                 .row
                     .col-md-8.col-12-sm
-                        form
-                            .row
-                                .col-md-12.form-group
-                                    label(for="guess") Your next guess:
-                                    input.form-control(type="number", v-model='guess')/
-                            .row
-                                .col-md-12.form-group
-                                    button.btn.btn-primary(type="button", v-on:click='postGuess()') Guess
-                .row: .col-md-8.col-12-sm 
-                    ul.list-group
-                        li(v-for='guess in guesses', v-bind:class="{'list-group-item-info': guess.result=='low', 'list-group-item-danger': guess.result=='high'}").list-group-item
-                            span {{guess.value}} - too {{guess.result}}
+                        .form-group
+                            label(for="guess") Your next guess:
+                            input.form-control(type="number", v-model='guess')/
+                        .form-group
+                            button.btn.btn-primary(type="button", v-on:click='postGuess()') Guess
+                ul.list-group
+                    li(v-for='guess in guesses', v-bind:class="{'list-group-item-info': guess.result=='low', 'list-group-item-danger': guess.result=='high'}").list-group-item
+                        span {{guess.value}} - too {{guess.result}}
 
             .row(v-if='state == "complete"')
                 h1 Great job!  
@@ -67,6 +60,9 @@ html
                 },
 
                 mounted: function () {
+                    // The game id is what allows us to post guesses, 
+                    // the server can associate the game id with the game
+                    // in the database.
                     this.game_id = $("#guess").data("game-id");
                 },
             
@@ -74,16 +70,16 @@ html
                     postGuess: function () {
                         var v = this;
                         $.post("/"+this.game_id, {guess: this.guess}, function(data) {
+                            v.guesses.unshift({
+                                value: v.guess,
+                                result: data.result
+                            })
                             if ( data.result == 'success') {
                                 v.state = 'complete'
                                 v.secret = v.guess;
                             }
                             else {
                                 v.state = 'guess';
-                                v.guesses.unshift({
-                                    value: v.guess,
-                                    result: data.result
-                                })
                                 v.guess = ""
                             }
                         })
